force-app/main/default/objects/custom_create11__c/custom_create11__c.object-meta.xml
<CustomObject>
    <label>Custom created object11</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects11</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>