force-app/main/default/objects/custom_create11__c/fields/custom_create_11field558__c.field-meta.xml
<CustomField>
    <fullName>custom_create_11field558__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 11field558</label>
    <type>Checkbox</type>
</CustomField>