force-app/main/default/objects/custom_create11__c/fields/custom_create_11field568__c.field-meta.xml
<CustomField>
    <fullName>custom_create_11field568__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 11field568</label>
    <type>Checkbox</type>
</CustomField>